[gd_scene load_steps=8 format=3 uid="uid://xxxxxxxxxxxxx"]

[ext_resource type="Script" path="res://scenes/ui/settings/settings_menu.gd" id="1_xxxxx"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2_xxxxx"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xxxxx")
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.9)

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "设置"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="图形" type="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Resolution" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "分辨率"

[node name="OptionButton" type="OptionButton"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 1
popup/item_2/text = "2560 x 1440"
popup/item_2/id = 2

[node name="WindowMode" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "窗口模式"

[node name="OptionButton" type="OptionButton"]
layout_mode = 2
item_count = 3
popup/item_0/text = "窗口"
popup/item_0/id = 0
popup/item_1/text = "无边框窗口"
popup/item_1/id = 1
popup/item_2/text = "全屏"
popup/item_2/id = 2

[node name="VSync" type="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
size_flags_horizontal = 3
text = "垂直同步"

[node name="CheckBox" type="CheckBox"]
layout_mode = 2

[node name="AntiAliasing" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "抗锯齿"

[node name="OptionButton" type="OptionButton"]
layout_mode = 2
item_count = 4
popup/item_0/text = "关闭"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA 2x"
popup/item_2/id = 2
popup/item_3/text = "MSAA 4x"
popup/item_3/id = 3

[node name="音频" type="ScrollContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="MasterVolume" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "主音量"

[node name="HSlider" type="HSlider"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "音乐音量"

[node name="HSlider" type="HSlider"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "音效音量"

[node name="HSlider" type="HSlider"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="游戏" type="ScrollContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Language" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "语言"

[node name="OptionButton" type="OptionButton"]
layout_mode = 2
item_count = 2
popup/item_0/text = "简体中文"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="CardSpeed" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "卡牌动画速度"

[node name="HSlider" type="HSlider"]
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="AutoEndTurn" type="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
size_flags_horizontal = 3
text = "自动结束回合"

[node name="CheckBox" type="CheckBox"]
layout_mode = 2

[node name="ShowDamageNumbers" type="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
size_flags_horizontal = 3
text = "显示伤害数字"

[node name="CheckBox" type="CheckBox"]
layout_mode = 2

[node name="操作" type="ScrollContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="DragThreshold" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "拖动阈值"

[node name="HSlider" type="HSlider"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 10.0

[node name="DoubleClickSpeed" type="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label"]
layout_mode = 2
text = "双击速度"

[node name="HSlider" type="HSlider"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.5

[node name="ButtonContainer" type="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResetButton" type="Button"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "重置"

[node name="ApplyButton" type="Button"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "应用"

[node name="BackButton" type="Button"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "返回" 